add: for loop student

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,14 +1,16 @@
-{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Student Management Application</title>
-    <link href="{% static 'styles.css' %}" rel="stylesheet">
+    <link href="../static/styles.css" rel="stylesheet">
 </head>
 <body>
     <h1>Student Management Application</h1>
-
+    {% for student in students %}
+    <p>{{ student.name }}</p>
+    <p>{{ student.email }}</p>
+    {% endfor %}
 </body>
 </html>
