--- a/Templates/index.html
+++ b/Templates/index.html
@@ -22,11 +22,15 @@
             <td>{{ student.email }}</td>
             <td>{{ student.dob }}</td>
             <td>{{ student.gender }}</td>
-            <td>{{ student.faculty }}</td>
+            <td>{{ student.faculty.name }}</td>
             <td>{{ student.gpa }}</td>
         </tr>
         {% endfor %}
         </tbody>
     </table>
+    <a class="btn btn-primary" href="{{ url_for('add_student') }}">Add</a>
+    <a class="btn btn-secondary" href="{{ url_for('edit_student', id=1) }}" >Edit</a>
+    <a class="btn btn-danger" href="{{ url_for('delete_student') }}">Delete</a>
+
 </div>
 {% endblock %}
