--- a/Templates/student-form.html
+++ b/Templates/student-form.html
@@ -1,8 +1,40 @@
 {% extends 'base.html' %}
 {% block content %}
 {% from 'bootstrap5/form.html' import render_form %}
-        <div class="container">
-        <!-- This is where our form will go. -->
-			{{ render_form(form) }}
+<div class="container">
+    <form method="post">
+        <div class="form-group">
+            <label>Name:</label>
+            <input name="name" class="form-control"/>
         </div>
+        <div class="form-group">
+            <label>Email:</label>
+            <input type="email" class="form-control">
+        </div>
+        <div class="form-group">
+            <label>Date of Birth:</label>
+            <input name="dob" type="date" class="form-control">
+        </div>
+        <div class="gender">
+            <label>Date of Birth:</label>
+            <select class="form-control" name="dob">
+                <option>F</option>
+                <option>M</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label>Faculty</label>
+            <select class="form-control" name="faculty">
+                {% for faculty in faculties %}
+                <option>{{ faculty.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="form-group">
+            <label>GPA: </label>
+            <input name="gpa" class="form-control"/>
+        </div>
+        <button type="submit" class="btn btn-primary mb-2">Submit</button>
+    </form>
+</div>
 {% endblock %}
