--- a/Templates/student-form.html
+++ b/Templates/student-form.html
@@ -1,32 +1,33 @@
 {% extends 'base.html' %}
 {% block content %}
 {% from 'bootstrap5/form.html' import render_form %}
-<div class="container">
+<div  class="container">
     <form method="post">
+        {{ form.csrf_token }}
         <div class="form-group">
             <label>Name:</label>
             <input name="name" class="form-control"/>
         </div>
         <div class="form-group">
             <label>Email:</label>
-            <input type="email" class="form-control">
+            <input type="email" class="form-control" name="email">
         </div>
         <div class="form-group">
             <label>Date of Birth:</label>
             <input name="dob" type="date" class="form-control">
         </div>
         <div class="gender">
-            <label>Date of Birth:</label>
-            <select class="form-control" name="dob">
+            <label>Gender:</label>
+            <select class="form-control" name="gender">
                 <option>F</option>
                 <option>M</option>
             </select>
         </div>
         <div class="form-group">
             <label>Faculty</label>
-            <select class="form-control" name="faculty">
+            <select class="form-control">
                 {% for faculty in faculties %}
-                <option>{{ faculty.name }}</option>
+                <option name="{{ faculty.id }}">{{ faculty.name }}</option>
                 {% endfor %}
             </select>
         </div>
