--- a/Templates/index.html
+++ b/Templates/index.html
@@ -24,13 +24,14 @@
             <td>{{ student.gender }}</td>
             <td>{{ student.faculty.name }}</td>
             <td>{{ student.gpa }}</td>
+            <td><a class="btn btn-danger" href="{{ url_for('delete_student', id=student.id) }}">Delete</a></td>
         </tr>
         {% endfor %}
         </tbody>
     </table>
     <a class="btn btn-primary" href="{{ url_for('add_student') }}">Add</a>
     <a class="btn btn-secondary" href="{{ url_for('edit_student', id=1) }}" >Edit</a>
-    <a class="btn btn-danger" href="{{ url_for('delete_student') }}">Delete</a>
+
 
 </div>
 {% endblock %}
