--- a/Templates/student-form.html
+++ b/Templates/student-form.html
@@ -2,40 +2,45 @@
 {% block content %}
 {% from 'bootstrap5/form.html' import render_form %}
 <div  class="container">
-    <form method="POST">
-        {{ form.hidden_tag() }}
-        <div class="form-group">
-            <label>Name:</label>
-            <input name="name" class="form-control"/>
-        </div>
-        <div class="form-group">
-            <label>Email:</label>
-            <input type="email" class="form-control" name="email">
-        </div>
-        <div class="form-group">
-            <label>Date of Birth:</label>
-            <input name="dob" type="date" class="form-control">
-        </div>
-        <div class="gender">
-            <label>Gender:</label>
-            <select class="form-control" name="gender">
-                <option>F</option>
-                <option>M</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label>Faculty</label>
-            <select class="form-control" name="faculty_id">
-                {% for faculty in faculties %}
-                <option value="{{ faculty.id }}">{{ faculty.name }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="form-group">
-            <label>GPA: </label>
-            <input name="gpa" class="form-control"/>
-        </div>
-        <button type="submit" class="btn btn-primary mb-2 mt-2">Submit</button>
-    </form>
+
+        {{ form.csrf_token() }}
+        {{ render_form(form) }}
+
+
+<!--    <form method="POST">-->
+<!--        {{ form.csrf_token() }}-->
+<!--        <div class="form-group">-->
+<!--            <label>Name:</label>-->
+<!--            <input name="name" class="form-control"/>-->
+<!--        </div>-->
+<!--        <div class="form-group">-->
+<!--            <label>Email:</label>-->
+<!--            <input type="email" class="form-control" name="email">-->
+<!--        </div>-->
+<!--        <div class="form-group">-->
+<!--            <label>Date of Birth:</label>-->
+<!--            <input name="dob" type="date" class="form-control">-->
+<!--        </div>-->
+<!--        <div class="gender">-->
+<!--            <label>Gender:</label>-->
+<!--            <select class="form-control" name="gender">-->
+<!--                <option>F</option>-->
+<!--                <option>M</option>-->
+<!--            </select>-->
+<!--        </div>-->
+<!--        <div class="form-group">-->
+<!--            <label>Faculty</label>-->
+<!--            <select class="form-control" name="faculty_id">-->
+<!--                {% for faculty in faculties %}-->
+<!--                <option value="{{ faculty.id }}">{{ faculty.name }}</option>-->
+<!--                {% endfor %}-->
+<!--            </select>-->
+<!--        </div>-->
+<!--        <div class="form-group">-->
+<!--            <label>GPA: </label>-->
+<!--            <input name="gpa" class="form-control"/>-->
+<!--        </div>-->
+<!--        <button type="submit" class="btn btn-primary mb-2 mt-2">Submit</button>-->
+<!--    </form>-->
 </div>
 {% endblock %}
