--- a/Templates/index.html
+++ b/Templates/index.html
@@ -21,11 +21,11 @@
             <th>{{ student.id }}</th>
             <td>{{ student.name }}</td>
             <td>{{ student.email }}</td>
-            <td>{{ student.dob }}</td>
+            <td>{{ student.dob.strftime('%d-%m-%Y') }}</td>
             <td>{{ student.gender }}</td>
             <td>{{ student.faculty.name }}</td>
             <td>{{ student.gpa }}</td>
-            <td><a class="btn btn-warning" href="{{ url_for('edit_student', id=student.id) }}" >Edit</a></td>
+            <td><a class="btn btn-success" href="{{ url_for('edit_student', id=student.id) }}" >Edit</a></td>
             <td><a class="btn btn-danger" href="{{ url_for('delete_student', id=student.id) }}">Delete</a></td>
         </tr>
         {% endfor %}
