--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container">
-    <h1>Student Management Application</h1>
+    <h2 class="text-center">Student Management Application</h2>
     <table class="table">
         <thead>
         <tr>
