--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,37 +1,10 @@
 {% extends 'base.html' %}
+<h2 class="text-center">Student Management Application</h2>
+
+
 {% block content %}
 <div class="container">
-    <h2 class="text-center">Student Management Application</h2>
-    <table class="table">
-        <thead>
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Email</th>
-            <th>DOB</th>
-            <th>Gender</th>
-            <th>Faculty</th>
-            <th>GPA</th>
-            <th colspan="2"></th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for student in students %}
-        <tr>
-            <th>{{ student.id }}</th>
-            <td>{{ student.name }}</td>
-            <td>{{ student.email }}</td>
-            <td>{{ student.dob.strftime('%d-%m-%Y') }}</td>
-            <td>{{ student.gender }}</td>
-            <td>{{ student.faculty.name }}</td>
-            <td>{{ student.gpa }}</td>
-            <td><a class="btn btn-success" href="{{ url_for('edit_student', id=student.id) }}" >Edit</a></td>
-            <td><a class="btn btn-danger" href="{{ url_for('delete_student', id=student.id) }}">Delete</a></td>
-        </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-    <a class="btn btn-primary" href="{{ url_for('add_student') }}">Add</a>
+    {% include 'nav.html' %}
 
 
 
