--- a/Templates/student-table.html
+++ b/Templates/student-table.html
@@ -1,5 +1,5 @@
 {% block table %}
-<table class="table">
+<table class="table table-hover table-light table-striped">
         <thead>
         <tr>
             <th>ID</th>
@@ -26,7 +26,13 @@
             <td><a class="btn btn-danger" href="{{ url_for('delete_student', id=student.id) }}">Delete</a></td>
         </tr>
         {% endfor %}
+        <tr>
+            <td colspan="9">
+                <div class="text-center">
+                    <a type="button" class="btn btn-primary text-center" href="{{ url_for('add_student') }}">Add</a>
+                </div>
+            </td>
+        </tr>
         </tbody>
     </table>
-    <a class="btn btn-primary" href="{{ url_for('add_student') }}">Add</a>
 {% endblock %}
