add: total-table

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,5 +4,6 @@
 <h2 class="text-center">Student Management Application</h2>
 <div class="container">
     {% include 'nav.html' %}
+    {% include 'total-table.html' %}
 </div>
 {% endblock %}
