--- a/Templates/faculty-form.html
+++ b/Templates/faculty-form.html
@@ -4,5 +4,6 @@
 <div  class="container">
         {{ form.csrf_token() }}
         {{ render_form(form) }}
+    <a class="btn btn-success float-left mt-3" href="{{ url_for('get_all') }}">Back</a>
 </div>
 {% endblock %}
