--- a/Templates/faculty-table.html
+++ b/Templates/faculty-table.html
@@ -16,8 +16,13 @@
             <td><a class="btn btn-danger" href="{{ url_for('delete_faculty', id=faculty.id) }}">Delete</a></td>
         </tr>
         {% endfor %}
+        <tr>
+            <td colspan="9">
+                <div class="text-center">
+                    <a type="button" class="btn btn-primary text-center" href="{{ url_for('add_faculty') }}">Add</a>
+                </div>
+            </td>
+        </tr>
         </tbody>
     </table>
-    <a class="btn btn-primary" href="{{ url_for('add_faculty') }}">Add</a>
-
 {% endblock %}
