--- a/Templates/instructor-table.html
+++ b/Templates/instructor-table.html
@@ -28,7 +28,13 @@
             <td><a class="btn btn-danger" href="{{ url_for('delete_instructor', id=instructor.id) }}">Delete</a></td>
         </tr>
         {% endfor %}
+        <tr>
+            <td colspan="9">
+                <div class="text-center">
+                    <a type="button" class="btn btn-primary text-center" href="{{ url_for('add_instructor') }}">Add</a>
+                </div>
+            </td>
+        </tr>
         </tbody>
     </table>
-    <a class="btn btn-primary" href="{{ url_for('add_instructor') }}">Add</a>
 {% endblock %}
