--- a/Templates/course-table.html
+++ b/Templates/course-table.html
@@ -1,5 +1,5 @@
-{% block table %}
-<table class="table">
+{% block course_table %}
+<table class="table table-hover table-light table-striped">
         <thead>
         <tr>
             <th>ID</th>
@@ -19,7 +19,7 @@
         <tr>
             <td colspan="4">
                 <div class="text-center">
-                    <a type="button" class="btn btn-primary text-center" href="{{ url_for('add_course') }}">Add</a>
+                    <a class="btn btn-primary text-center" href="{{ url_for('add_course') }}">Add</a>
                 </div>
             </td>
         </tr>
