--- a/Templates/instructor-table.html
+++ b/Templates/instructor-table.html
@@ -1,6 +1,6 @@
-{% block table %}
-<table class="table">
-        <thead>
+
+<table class="table table-hover table-light table-striped">
+    <thead>
         <tr>
             <th>ID</th>
             <th>Name</th>
@@ -12,8 +12,8 @@
             <th>Start Date</th>
             <th colspan="2"></th>
         </tr>
-        </thead>
-        <tbody>
+    </thead>
+    <tbody>
         {% for instructor in instructors %}
         <tr>
             <th>{{ instructor.id }}</th>
@@ -21,9 +21,9 @@
             <td>{{ instructor.email }}</td>
             <td>{{ instructor.dob.strftime('%d-%m-%Y') }}</td>
             <td>{{ instructor.gender }}</td>
-            <td>{{ instructor.faculty.name }}</td>
-            <td>{{ instructor.salary }}</td>
-            <td>{{ instructor.start_date }}</td>
+            <td>{{ instructor.faculties.name }}</td>
+            <td>{{ "{:,}".format(instructor.salary) }}</td>
+            <td>{{ instructor.start_date.strftime('%d-%m-%Y') }}</td>
             <td><a class="btn btn-success" href="{{ url_for('edit_instructor', id=instructor.id) }}" >Edit</a></td>
             <td><a class="btn btn-danger" href="{{ url_for('delete_instructor', id=instructor.id) }}">Delete</a></td>
         </tr>
@@ -31,10 +31,9 @@
         <tr>
             <td colspan="10">
                 <div class="text-center">
-                    <a type="button" class="btn btn-primary text-center" href="{{ url_for('add_instructor') }}">Add</a>
+                    <a class="btn btn-primary text-center" href="{{ url_for('add_instructor') }}">Add</a>
                 </div>
             </td>
         </tr>
-        </tbody>
-    </table>
-{% endblock %}
+    </tbody>
+</table>
