--- a/Templates/student-table.html
+++ b/Templates/student-table.html
@@ -1,4 +1,4 @@
-{% block table %}
+
 <table class="table table-hover table-light table-striped">
         <thead>
         <tr>
@@ -20,7 +20,7 @@
             <td>{{ student.email }}</td>
             <td>{{ student.dob.strftime('%d-%m-%Y') }}</td>
             <td>{{ student.gender }}</td>
-            <td>{{ student.faculty.name }}</td>
+            <td>{{ student.faculties.name }}</td>
             <td>{{ student.gpa }}</td>
             <td><a class="btn btn-success" href="{{ url_for('edit_student', id=student.id) }}" >Edit</a></td>
             <td><a class="btn btn-danger" href="{{ url_for('delete_student', id=student.id) }}">Delete</a></td>
@@ -29,10 +29,9 @@
         <tr>
             <td colspan="9">
                 <div class="text-center">
-                    <a type="button" class="btn btn-primary text-center" href="{{ url_for('add_student') }}">Add</a>
+                    <a class="btn btn-primary text-center" href="{{ url_for('add_student') }}">Add</a>
                 </div>
             </td>
         </tr>
         </tbody>
     </table>
-{% endblock %}
