--- a/Templates/course-table.html
+++ b/Templates/course-table.html
@@ -4,6 +4,11 @@
         <tr>
             <th>ID</th>
             <th>Name</th>
+            <th>Start Time</th>
+            <th>End Time</th>
+            <th>Credit</th>
+            <th>Duration</th>
+            <th>Description</th>
             <th colspan="2"></th>
         </tr>
         </thead>
@@ -12,12 +17,17 @@
         <tr>
             <th>{{ course.id }}</th>
             <td>{{ course.name }}</td>
+            <td>{{ course.start_time.strftime('%d-%m-%Y') }}</td>
+            <td>{{ course.end_time.strftime('%d-%m-%Y') }}</td>
+            <td>{{ course.credit }}</td>
+            <td>{{ course.duration }}</td>
+            <td>{{ course.description }}</td>
             <td><a class="btn btn-success" href="{{ url_for('edit_course', id=course.id) }}" >Edit</a></td>
             <td><a class="btn btn-danger" href="{{ url_for('delete_course', id=course.id) }}">Delete</a></td>
         </tr>
         {% endfor %}
         <tr>
-            <td colspan="4">
+            <td colspan="9">
                 <div class="text-center">
                     <a class="btn btn-primary text-center" href="{{ url_for('add_course') }}">Add</a>
                 </div>
