--- a/Templates/nav.html
+++ b/Templates/nav.html
@@ -10,13 +10,14 @@
     <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Faculty</button>
   </li>
   <li class="nav-item" role="presentation">
-    <button class="nav-link" id="message-tab" data-bs-toggle="tab" data-bs-target="#contact-tab-pane" type="button" role="tab" aria-controls="contact-tab-pane" aria-selected="false">Course</button>
+    <button class="nav-link" id="message-tab" data-bs-toggle="tab" data-bs-target="#message-tab-pane" type="button" role="tab" aria-controls="message-tab-pane" aria-selected="false">Course</button>
   </li>
 </ul>
 <div class="tab-content" id="myTabContent">
   <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">{% include 'student-table.html' %}</div>
   <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">{% include 'instructor-table.html' %}</div>
   <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">{% include 'faculty-table.html' %}</div>
-  <div class="tab-pane fade" id="message-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">{% include 'course-table.html' %}</div>
+  <div class="tab-pane fade" id="message-tab-pane" role="tabpanel" aria-labelledby="message-tab" tabindex="0">{% include 'course-table.html' %}</div>
 </div>
+
 {% endblock %}
