--- a/Templates/nav.html
+++ b/Templates/nav.html
@@ -21,7 +21,7 @@
   <div class="tab-pane fade" id="instructor-tab-pane" role="tabpanel" aria-labelledby="instructor-tab" tabindex="0">{% include 'instructor-table.html' %}</div>
   <div class="tab-pane fade" id="faculty-pane" role="tabpanel" aria-labelledby="faculty-tab" tabindex="0">{% include 'faculty-table.html' %}</div>
   <div class="tab-pane fade" id="course-tab-pane" role="tabpanel" aria-labelledby="course-tab" tabindex="0">{% include 'course-table.html' %}</div>
-  <div class="tab-pane fade" id="search-tab-pane" role="tabpanel" aria-labelledby="search-tab" tabindex="0">{% include 'course-table.html' %}</div>
+  <div class="tab-pane fade" id="search-tab-pane" role="tabpanel" aria-labelledby="search-tab" tabindex="0">{% include 'search.html' %}</div>
 </div>
 
 {% endblock %}
