--- a/Templates/search.html
+++ b/Templates/search.html
@@ -1,8 +1,7 @@
-{% extends 'base.html' %}
-{% block content %}
-{% from 'bootstrap5/form.html' import render_form %}
-<div  class="container">
-        {{ form.csrf_token() }}
-        {{ render_form(form) }}
-</div>
-{% endblock %}
+<form method="POST">
+        <div class="form-group">
+            <label>ID:</label>
+            <input name="id" class="form-control"/>
+        </div>
+    <button type="submit" class="btn btn-primary mb-2 mt-2">Submit</button>
+</form>
