--- a/Templates/search.html
+++ b/Templates/search.html
@@ -1,5 +1,5 @@
 <div class="container">
-<form method="POST">
+<form method="post">
         <div class="form-group row">
             <label class="col-sm-4 col-form-label">Search By | Student ID:</label>
             <div class="col-sm-6 mt-2">
