--- a/Templates/search_table.html
+++ b/Templates/search_table.html
@@ -12,7 +12,7 @@
         </tr>
         </thead>
         <tbody>
-        {% if student %}
+        {% if is_student %}
         <tr>
             <th>{{ student.id }}</th>
             <td>{{ student.name }}</td>
